// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dummy data 1`] = `
<div>
  <table>
    <thead>
      <tr>
        <th>
          Folder
        </th>
        <th>
          From
        </th>
        <th>
          To
        </th>
        <th>
          Preview
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <a
            name="folderId1"
            onClick={[Function]}
          >
            Folder 1
          </a>
        </td>
        <td>
          Foo Bar
        </td>
        <td>
          Baz Bar
        </td>
        <td>
          Here's a preview of a message body
        </td>
      </tr>
      <tr>
        <td>
          <a
            name="folderId2"
            onClick={[Function]}
          >
            Folder 2
          </a>
        </td>
        <td>
          Baz Bar
        </td>
        <td>
          Foo Bar
        </td>
        <td>
          Here's another message body
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="feedback"
  >
    <a
      href="https://beandotnet.azurewebsites.net/"
    >
      about this app
    </a>
     
    <a
      href="mailto:wravery@hotmail.com?Subject=Conversation%20Filer%20v2.0%20App%20for%20Outlook"
    >
      send feedback
    </a>
  </div>
</div>
`;

exports[`Empty results 1`] = `
<div>
  <h3>
    It looks like you haven't filed this conversation anywhere before.
  </h3>
  <div
    className="feedback"
  >
    <a
      href="https://beandotnet.azurewebsites.net/"
    >
      about this app
    </a>
     
    <a
      href="mailto:wravery@hotmail.com?Subject=Conversation%20Filer%20v2.0%20App%20for%20Outlook"
    >
      send feedback
    </a>
  </div>
</div>
`;

exports[`Folder selection callback works 1`] = `
<div>
  <h3>
    It looks like you haven't filed this conversation anywhere before.
  </h3>
  <div
    className="feedback"
  >
    <a
      href="https://beandotnet.azurewebsites.net/"
    >
      about this app
    </a>
     
    <a
      href="mailto:wravery@hotmail.com?Subject=Conversation%20Filer%20v2.0%20App%20for%20Outlook"
    >
      send feedback
    </a>
  </div>
</div>
`;

exports[`Loading 1`] = `
<div>
  <h3>
    Looking for other messages in this conversation...
  </h3>
  <div
    className="feedback"
  >
    <a
      href="https://beandotnet.azurewebsites.net/"
    >
      about this app
    </a>
     
    <a
      href="mailto:wravery@hotmail.com?Subject=Conversation%20Filer%20v2.0%20App%20for%20Outlook"
    >
      send feedback
    </a>
  </div>
</div>
`;
